--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch API Example</title>
-    <script src="script.js" defer></script> <!-- Reference to external script -->
+    <script src="prototypalBehaviour.js" defer></script> <!-- Reference to external script -->
 </head>
 <body>
     <h1>Fetch API Example</h1>
